--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,8 @@ Install:
   environment: production
   script:
     - npm install
-  release: node_modules/.bin/sequelize db:migrate; node_modules/.bin/sequelize db:seed:all
+    - node_modules/.bin/sequelize db:migrate
+    - node_modules/.bin/sequelize db:seed:all
 
 # Job 2:
 # Deploy to staging
