--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,18 @@
 {
+  "development": {
+    "username": "root",
+    "password": null,
+    "database": "literature",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  },
+  "test": {
+    "username": "root",
+    "password": null,
+    "database": "literature",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  },
   "production": {
     "use+env_variable": "DATABASE_URL",
     "dialect": "postgres",
