--- a/config/config.json
+++ b/config/config.json
@@ -16,6 +16,6 @@
   "production": {
     "use+env_variable": "DATABASE_URL",
     "dialect": "postgres",
-    "protocol": "postgres"
+    "operatorsAliases": false
   }
 }
