--- a/config/config.json
+++ b/config/config.json
@@ -14,8 +14,9 @@
     "dialect": "mysql"
   },
   "production": {
-    "use+env_variable": "DATABASE_URL",
+    "use_env_variable": "DATABASE_URL",
     "dialect": "postgres",
+    "protocol": "postgres",
     "operatorsAliases": false
   }
 }
